fix navbar center align issue

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -11,6 +11,7 @@
 }
 .navbar ul{
     display: flex;
+    align-items: center;
     gap: 40px;
     list-style: none;
 }
@@ -56,8 +57,7 @@
     border: none;
     outline: none;
     color: red;
-    visibility: hidden;
-    opacity: 0;
+    display: none !important;
 }
 
 @media (max-width:900px) {
@@ -75,29 +75,26 @@
         color: green;
     }
     .nav-btn{
-        visibility: visible;
-        opacity: 1;
+        display: block !important;
     }
     .navbar ul {
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 1.5rem;
-        background-color: #100f12;
-        transform: translateY(-100%);
-        transition: transform 0.6s ease-in-out;
+		position: fixed;
+		top: -100vh;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		gap: 1.5rem;
+		background-color: #100f12;
+		transition: 1s;
         z-index: 100;
-    }
-    
+	}
     .navbar ul.responsive_nav {
-        transform: translateY(0);
-    }
+		transform: translateY(100vh);
+	}
     .nav-close-btn {
 		position: absolute;
 		top: 2rem;
